# quilt

./: README.md
DeathStarBench/hotel_reservation_rust/: README.md
DeathStarBench/hotel_reservation_rust_lite/: README.md
DeathStarBench/media_microservice_rust/: README.md  run.sh
DeathStarBench/media_microservice_rust/cluster-2/compose-review-upload-unique-id/template/rust/function/: Cargo.toml
DeathStarBench/media_microservice_rust/cluster-2/compose-review-upload-unique-id/template/rust/function/src/: main.rs
DeathStarBench/media_microservice_rust_lite/: README.md  run.sh  run_openwhisk.sh
DeathStarBench/media_microservice_rust_lite_async/: README.md  run.sh  run_fission.sh
DeathStarBench/socialNetwork_rust/: README.md  build.sh
DeathStarBench/socialNetwork_rust/mongodb-test/template/rust/function/: Cargo.toml
DeathStarBench/social_network_rust/: README.md  build.sh
DeathStarBench/social_network_rust/cluster-1/StorePost/template/rust/function/: Cargo.toml
DeathStarBench/social_network_rust_lite/: README.md
DeathStarBench/social_network_rust_lite_2machine/: README.md
DeathStarBench/social_network_rust_lite_2machine_merge_test/: README.md
DeathStarBench/social_network_rust_lite_async/: README.md
DeathStarBench/social_network_rust_lite_async/cluster-1/social-graph-unfollow-with-username/template/rust/function/: Cargo.toml
DeathStarBench/social_network_rust_lite_async/cluster-1/social-graph-unfollow-with-username/template/rust/function/src/: main.rs
DeathStarBench/social_network_rust_lite_async/cluster-2/compose-creator-with-userid/template/rust/OpenFaaSRPC/: Cargo.toml
DeathStarBench/social_network_rust_lite_async/cluster-2/compose-creator-with-userid/template/rust/OpenFaaSRPC/src/: lib.rs
DeathStarBench/social_network_rust_lite_async/cluster-2/register-user-with-id/template/rust/function/: Cargo.toml
DeathStarBench/social_network_rust_lite_async/cluster-2/register-user-with-id/template/rust/function/src/: main.rs
DeathStarBench_WiseFuse/apiGateway/: APIGateway.py  Dockerfile  Makefile  build.sh  gen_func.py
DeathStarBench_WiseFuse/apiGateway_go/: Dockerfile  gen_func.py
DeathStarBench_WiseFuse/hotel_reservation_rust_lite/: run_fission.sh
DeathStarBench_WiseFuse_fakedb/apiGateway/: Dockerfile
DeathStarBench_WiseFuse_fakedb/apiGateway_go/: gen_func.py  server.go
DeathStarBench_WiseFuse_fakedb/apiGateway_old/: APIGateway.py
DeathStarBench_WiseFuse_fakedb/hotel_reservation_rust_lite/cluster-1/get-nearby-points-rest/template/rust/function/: Cargo.toml
DeathStarBench_WiseFuse_fakedb/hotel_reservation_rust_lite/cluster-1/nearby-hotel/template/rust/function/: Cargo.toml
DeathStarBench_WiseFuse_fakedb/media_microservice_rust_lite_async/cluster-2/register-user-with-id/template/rust/function/: Cargo.toml
DeathStarBench_WiseFuse_fakedb/social_network_rust_lite_async/cluster-2/register-user/template/rust/function/: Cargo.toml
DeathStarBench_fake/social_network_rust/: README.md
DeathStarBench_fake/social_network_rust_lite_async/other/Caller/template/rust/function/: Cargo.toml
DeathStarBench_fakedb/hotel_reservation_rust_lite/cluster-1/get-nearby-points-cinema-4/template/rust/function/: Cargo.toml
DeathStarBench_fakedb/hotel_reservation_rust_lite/cluster-1/get-nearby-points-cinema-4/template/rust/function/src/: main.rs
DeathStarBench_fakedb/hotel_reservation_rust_lite/cluster-2/make-reservation/template/rust/function/: Cargo.toml
DeathStarBench_fakedb/hotel_reservation_rust_lite_async/: README.md
DeathStarBench_fakedb/media_microservice_rust_lite/cluster-1/upload-movie-id/template/rust/function/: Cargo.toml
DeathStarBench_fakedb/media_microservice_rust_lite/cluster-1/upload-movie-id/template/rust/function/src/: main.rs
DeathStarBench_fakedb/media_microservice_rust_lite/cluster-2/compose-review-upload-movie-id/template/rust/function/: Cargo.toml
DeathStarBench_fakedb/media_microservice_rust_lite_async/cluster-1/read-cast-info/template/rust/function/: Cargo.toml
DeathStarBench_fakedb/media_microservice_rust_lite_async/cluster-1/read-cast-info/template/rust/function/src/: main.rs
DeathStarBench_fakedb/social_network_rust/: Dockerfile
DeathStarBench_fakedb/social_network_rust_lite_async/cluster-1/read-home-timeline/template/rust/function/: Cargo.toml
DeathStarBench_fakedb/social_network_rust_lite_async/cluster-1/social-graph-insert-user/template/rust/function/: Cargo.toml
DeathStarBench_fakedb/social_network_rust_lite_async/cluster-2/compose-creator-with-userid/template/rust/function/: Cargo.toml
DeathStarBench_fakedb/social_network_rust_lite_async/cluster-2/text-service/template/rust/function/: Cargo.toml
DeathStarBench_fakedb/social_network_rust_lite_async/cluster-2/text-service/template/rust/function/src/: main.rs
DeathStarBench_profile/social_network_rust_lite/FissionRPC/: Cargo.toml
DeathStarBench_profile/social_network_rust_lite/FissionRPC/src/: lib.rs
SoftBound-llvm10/: README.md
SoftBound-new/: README.md
apache_thrift_example/: PhoneServiceExample  README.md  build.sh
docker-files/: Dockerfile.google  Dockerfile.llvm  Dockerfile.socialnetwork  README.md  docker_images.sh
google-platform-docker/: Dockerfile.google  README.md  docker_images.sh
ironFunc-test/: Dockerfile  Dockerfile.lwc  README.md  docker_images.sh  main.c
ironFunc-test/c/: main.c  (+2 more)
merge-rust-func/: MergeRustFunc.cpp  MergeRustFunc.h  README.md
merge_func/: CMakeLists.txt  PassBuilder.cpp  PassRegistry.def
merge_func/merge-swift-and-rust/example/callee/: Cargo.toml  build.sh
merge_func/merge-swift-and-rust/example/callee/src/: main.rs
setup/: README.md  bootstrap.sh  build.sh  build_all.sh  gen_yaml.py  gen_yaml_old.py  helper.py  install.sh  kubeconfig  machine.json  machine_clab.json
socialnetwork_faas/: social_network_types.h
socialnetwork_softbound/: README.md  docker-compose-placement.yml  docker-compose-write.yml  machines.json  microservice-deps-cpp.sh  run_once_write.sh
socialnetwork_softbound/DeathStarBench/socialNetwork/src/UniqueIdService/: CMakeLists.txt
test/: Dockerfile  func.js  package.json
(+3399 files in other folders)
