[package]
name = "OpenFaaSRPC"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyroscope = "0.5.8"
pyroscope_pprofrs = "0.2"
lazy_static = "1.4"
once_cell = "1.8"
curl = "0.4.46"
curl-sys = "=0.4.72"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.79"
