[package]
name = "function"
version = "0.1.0"
authors = ["Yuxuan Zhang <zyuxuan@seas.upenn.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.79"
