[package]
name = "function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
random-string = "1.0"
sha256 = "1.5.0"
mongodb = { version = "2.8.2", default-features = false, features = ["sync"] }
redis = "0.25.3"
serde = "1.0.197"
serde_json = "1.0.79"
OpenFaaSRPC = { path = "../OpenFaaSRPC" }
DbInterface = { path = "../DbInterface" }
