[package]
name = "get-nearby-points-cinema-4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
knn = "0.1.3"
rand = "0.8"
memcache = "0.17.2"
serde = "1.0.197"
serde_json = "1.0.79"
redis = "0.25.3"
libc = "0.2"
OpenFaaSRPC = { path = "../OpenFaaSRPC" }
DbInterface = { path = "../DbInterface" }
