[package]
name = "make-reservation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memcache = "0.17.2"
chrono = "0.4.38"
serde = "1.0.197"
serde_json = "1.0.79"
redis = "0.25.3"
rand = "0.8"
OpenFaaSRPC = { path = "../OpenFaaSRPC" }
DbInterface = { path = "../DbInterface" }
