[package]
name = "compose-review-upload-movie-id"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memcache = "0.17.2"
serde = "1.0.197"
serde_json = "1.0.79"
OpenFaaSRPC = { path = "../OpenFaaSRPC" }
DbInterface = { path = "../DbInterface" } 
