[package]
name = "read-home-timeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
memcache = "0.17.2"
serde = "1.0.197"
serde_json = "1.0.79"
jws = "0.2.9"
redis = "0.25.3"
rand = "0.8"
OpenFaaSRPC = { path = "../OpenFaaSRPC" }
DbInterface = { path = "../DbInterface" }
