[package]
name = "social-graph-insert-user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memcache = "0.17.2"
redis = "0.25.3"
serde = "1.0.197"
serde_json = "1.0.79"
sha256 = "1.5.0"
jws = "0.2.9"
OpenFaaSRPC = { path = "../OpenFaaSRPC" }
DbInterface = { path = "../DbInterface" }
