[package]
name = "compose-creator-with-userid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
memcache = "0.17.2"
serde = "1.0.197"
serde_json = "1.0.79"
OpenFaaSRPC = { path = "../OpenFaaSRPC" }
