[package]
name = "text-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
random-string = "1.0"
serde = "1.0.197"
serde_json = "1.0.79"
memcache = "0.17.2"
regex = "1.10.4"
OpenFaaSRPC = { path = "../OpenFaaSRPC" }

[profile.release]
panic = "abort"
lto = true
